video part compl

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body class="bg-[]">
+<body style="background-color: #0f172a;">
 
     <!-- brands start -->
     <section class="bg-transparent text-center py-2">
@@ -39,10 +39,10 @@
     <!-- brands end -->
 
     <!-- Video or text start -->
-    <section class="bg-transparent py-10 text-center">
+    <section class="bg-[#0f172AB3] py-10 text-center">
         <div class="mx-auto max-w-[74rem] px-6 sm:px-8 md:px-12">
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-2 gap-4">
-                <div class="grid1-item border-black border">
+                <div class="grid1-item">
                     <div class="relative overflow-hidden rounded-lg shadow-md dark:shadow-gray-800 z-1">
                         <div class="relative">
                             <video controls autoplay loop>
@@ -54,7 +54,7 @@
                         </div>
 
                         <div class="absolute bottom-2/4 translate-y-2/4 start-0 end-0 text-center">
-                            <a href="#!" data-type="youtube" data-id="S_CGed6E610"
+                            <a href="#" data-type="youtube" data-id="S_CGed6E610"
                                 class="lightbox lg:h-16 h-14 lg:w-16 w-14 rounded-full shadow-lg dark:shadow-gray-800 inline-flex items-center justify-center bg-white dark:bg-slate-900 hover:bg-amber-400 dark:hover:bg-amber-400 text-amber-400 hover:text-white duration-500 ease-in-out mx-auto">
                                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
                                     stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
@@ -66,23 +66,23 @@
                         </div>
                     </div>
 
-                    <!-- <div class="mt-6">
+                    <div class="mt-6">
                         <a href=""
                             class="py-[6px] px-2 inline-flex items-center tracking-wider align-middle duration-500 text-sm text-center rounded bg-amber-400/5 hover:bg-amber-400 border border-amber-400/10 hover:border-amber-400 text-amber-400 hover:text-white font-semibold m-0.5"><img
-                                src="assets/images/flags/italy.png" class="h-5 w-5 me-1" alt=""> Italian</a>
+                                src="/images/italy.png" class="h-5 w-5 me-1" alt=""> Italian</a>
                         <a href=""
                             class="py-[6px] px-2 inline-flex items-center tracking-wider align-middle duration-500 text-sm text-center rounded bg-amber-400/5 hover:bg-amber-400 border border-amber-400/10 hover:border-amber-400 text-amber-400 hover:text-white font-semibold m-0.5"><img
-                                src="assets/images/flags/india.png" class="h-5 w-5 me-1" alt=""> Hindi</a>
+                                src="/images/india.png" class="h-5 w-5 me-1" alt=""> Hindi</a>
                         <a href=""
                             class="py-[6px] px-2 inline-flex items-center tracking-wider align-middle duration-500 text-sm text-center rounded bg-amber-400/5 hover:bg-amber-400 border border-amber-400/10 hover:border-amber-400 text-amber-400 hover:text-white font-semibold m-0.5"><img
-                                src="assets/images/flags/russia.png" class="h-5 w-5 me-1" alt=""> Russian</a>
+                                src="/images/russia.png" class="h-5 w-5 me-1" alt=""> Russian</a>
                         <a href=""
                             class="py-[6px] px-2 inline-flex items-center tracking-wider align-middle duration-500 text-sm text-center rounded bg-amber-400/5 hover:bg-amber-400 border border-amber-400/10 hover:border-amber-400 text-amber-400 hover:text-white font-semibold m-0.5"><img
-                                src="assets/images/flags/spain.png" class="h-5 w-5 me-1" alt=""> Spanish</a>
+                                src="/images/spain.png" class="h-5 w-5 me-1" alt=""> Spanish</a>
                         <a href=""
                             class="py-[6px] px-2 inline-flex items-center tracking-wider align-middle duration-500 text-sm text-center rounded bg-amber-400/5 hover:bg-amber-400 border border-amber-400/10 hover:border-amber-400 text-amber-400 hover:text-white font-semibold m-0.5"><img
-                                src="assets/images/flags/usa.png" class="h-5 w-5 me-1" alt=""> English</a>
-                    </div> -->
+                                src="/images/usa.png" class="h-5 w-5 me-1" alt=""> English</a>
+                    </div>
 
                 </div>
                 <div class="grid1-item border-black border text-left">
