--- a/public/index.html
+++ b/public/index.html
@@ -85,45 +85,126 @@
                     </div>
 
                 </div>
-                <div class="grid1-item border-black border text-left">
+                <div class="grid1-item text-left text-white">
                     <!--  -->
-                    <h4>Turn text into high-quality
-                        voiceovers with one click</h4>
-                    <p>
-                        "Usually, our colleagues don't jump in the air when they hear e-learning, but the AI videos
-                        created with Mortal.Ai have sparked motivation that we haven't seen before."
-                    </p>
-                    <h4 class="items-center flex ">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="w-5 h-5 mr-2 text-[#FFc800] font-semibold">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                d="M9 12.75 11.25 15 15 9.75m-3-7.036A11.959 11.959 0 0 1 3.598 6 11.99 11.99 0 0 0 3 9.749c0 5.592 3.824 10.29 9 11.623 5.176-1.332 9-6.03 9-11.622 0-1.31-.21-2.571-.598-3.751h-.152c-3.196 0-6.1-1.248-8.25-3.285Z" />
-                        </svg>
-                        Digital Marketing Solutions for Tomorrow
-                    </h4>
-                    <h4 class="items-center flex ">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="w-5 h-5 mr-2 text-[#ffc800] font-semibold">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                d="M9 12.75 11.25 15 15 9.75m-3-7.036A11.959 11.959 0 0 1 3.598 6 11.99 11.99 0 0 0 3 9.749c0 5.592 3.824 10.29 9 11.623 5.176-1.332 9-6.03 9-11.622 0-1.31-.21-2.571-.598-3.751h-.152c-3.196 0-6.1-1.248-8.25-3.285Z" />
-                        </svg>
-                        Our Talented & Experienced Marketing Agency
-                    </h4>
-                    <h4 class="items-center flex ">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                            stroke="currentColor" class="w-5 h-5 mr-2 text-[#FFc800] font-semibold">
-                            <path stroke-linecap="round" stroke-linejoin="round"
-                                d="M9 12.75 11.25 15 15 9.75m-3-7.036A11.959 11.959 0 0 1 3.598 6 11.99 11.99 0 0 0 3 9.749c0 5.592 3.824 10.29 9 11.623 5.176-1.332 9-6.03 9-11.622 0-1.31-.21-2.571-.598-3.751h-.152c-3.196 0-6.1-1.248-8.25-3.285Z" />
-                        </svg>
-                        Create your own skin to match your brand
-                    </h4>
-                    <!--  -->
+                    <div class="ms-5">
+                        <h4 class="font-semibold mt-8 mb-2 text-xl lg:text-4xl md:text-3xl sm:text-3xl">Turn text into
+                            high-quality
+                            voiceovers with one click</h4>
+                        <p
+                            class="text-[12px] lg:text-[14px] md:text-[15px] sm:text-[12px] my-3 text-slate-400 leading-snug">
+                            "Usually, our colleagues don't jump in the air when they hear e-learning, but the AI videos
+                            created with Mortal.Ai have sparked motivation that we haven't seen before."
+                        </p>
+                        <div class="mt-5">
+                            <h4
+                                class="items-center flex  text-slate-400 mb-1 text-xs lg:text-base md:text-base sm:text-base">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="currentColor"
+                                    class="w-5 h-5 mr-2 text-[#FFc800] font-semibold">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M9 12.75 11.25 15 15 9.75m-3-7.036A11.959 11.959 0 0 1 3.598 6 11.99 11.99 0 0 0 3 9.749c0 5.592 3.824 10.29 9 11.623 5.176-1.332 9-6.03 9-11.622 0-1.31-.21-2.571-.598-3.751h-.152c-3.196 0-6.1-1.248-8.25-3.285Z" />
+                                </svg>
+                                Digital Marketing Solutions for Tomorrow
+                            </h4>
+                            <h4
+                                class="items-center flex  text-slate-400 mb-1 text-xs lg:text-base md:text-base sm:text-base">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="currentColor"
+                                    class="w-5 h-5 mr-2 text-[#ffc800] font-semibold">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M9 12.75 11.25 15 15 9.75m-3-7.036A11.959 11.959 0 0 1 3.598 6 11.99 11.99 0 0 0 3 9.749c0 5.592 3.824 10.29 9 11.623 5.176-1.332 9-6.03 9-11.622 0-1.31-.21-2.571-.598-3.751h-.152c-3.196 0-6.1-1.248-8.25-3.285Z" />
+                                </svg>
+                                Our Talented & Experienced Marketing Agency
+                            </h4>
+                            <h4
+                                class="items-center flex  text-slate-400 mb-1 text-xs lg:text-base md:text-base sm:text-base">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+                                    stroke-width="1.5" stroke="currentColor"
+                                    class="w-5 h-5 mr-2 text-[#FFc800] font-semibold">
+                                    <path stroke-linecap="round" stroke-linejoin="round"
+                                        d="M9 12.75 11.25 15 15 9.75m-3-7.036A11.959 11.959 0 0 1 3.598 6 11.99 11.99 0 0 0 3 9.749c0 5.592 3.824 10.29 9 11.623 5.176-1.332 9-6.03 9-11.622 0-1.31-.21-2.571-.598-3.751h-.152c-3.196 0-6.1-1.248-8.25-3.285Z" />
+                                </svg>
+                                Create your own skin to match your brand
+                            </h4>
+                        </div>
+                        <!--  -->
+                        <button type="button" href="#"
+                            class="text-white justify-center flex items-center font-medium my-4 hover:text-[#ffc800] duration-300">
+                            Find Out More
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-4 h-4 ms-2 ">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
+                            </svg>
+
+                        </button>
+                    </div>
                 </div>
+
             </div>
         </div>
     </section>
     <!-- Video or text  end-->
 
+    <!--  -->
+    <section class="bg-transparent py-20 text-white text-center">
+        <div class="mx-auto max-w-7x1 px-6 sm:px-8 md:px-12">
+            <h3 class="mb-4 md:text-3xl md:leading-normal text-2xl leading-normal font-semibold">AI + video creation =
+                <br> outstanding <span
+                    class="bg-gradient-to-br from-amber-400 to-fuchsia-600 text-transparent bg-clip-text">Mortal.Ai</span>
+            </h3>
+            <p class="text-slate-400 max-w-xl mx-auto">Artificial intelligence makes it fast easy to create content for
+                your blog, social media, website, and more!</p>
+            <div class="my-12 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 gap-8 max-w-6xl mx-auto ">
+                <div class="grid1-item">
+                    <div
+                        class="relative overflow-hidden hover:scale-105 duration-200 rounded-md  ">
+
+                        <img src="/images/video-1.png" class="relative rounded-t-md shadow-md dark:shadow-slate-700 z-1"
+                            alt="">
+                    </div>
+
+                    <div class="p-6">
+                        <h5 class="text-lg font-semibold">$7000+ saved on video creation.</h5>
+                        <p class="text-slate-400 mt-3">Artificial intelligence makes it fast easy to create content
+                            for your video creations.</p>
+                    </div>
+                </div><!--end content-->
+
+                <div class="grid1-item">
+                    <div
+                        class="relative overflow-hidden hover:scale-105 duration-200 rounded-md  ">
+
+                        <img src="/images/video-2.png" class="relative rounded-t-md shadow-md dark:shadow-slate-700 z-1"
+                            alt="">
+                    </div>
+
+                    <div class="p-6">
+                        <h5 class="text-lg font-semibold">35%+ increase in user engagement.</h5>
+                        <p class="text-slate-400 mt-3">Artificial intelligence makes it fast easy to create content for
+                            your
+                            video creations.</p>
+                    </div>
+                </div><!--end content-->
+                <div class="grid1-item">
+                    <div
+                        class="relative overflow-hidden hover:scale-105 duration-200 rounded-md  ">
+
+                        <img src="/images/video-3.png" class="relative rounded-t-md shadow-md dark:shadow-slate-700 z-1"
+                            alt="">
+                    </div>
+
+                    <div class="p-6">
+                        <h5 class="text-lg font-semibold">5 hours saved on single video.</h5>
+                        <p class="text-slate-400 mt-3">Artificial intelligence makes it fast easy to create content for
+                            your
+                            video creations.</p>
+                    </div>
+                </div><!--end content-->
+            </div>
+        </div>
+    </section>
+    <!--  -->
 
 
 
